--- a/source/form.html
+++ b/source/form.html
@@ -2,13 +2,15 @@
 <html class="page" lang="ru">
 	<head>
 		<meta charset="UTF-8">
-		<title>Питание для котов CAT ENERGY</title>
+		<title>Заявка для подбора питания для котов CAT ENERGY</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="stylesheet" href="styles/styles.css">
 		<script src="scripts/index.js" defer></script>
 		<link rel="icon" href="favicon.ico">
-		<link rel="icon" href="favicons/icon.svg" type="image/svg+xml"> <!-- 32×32 -->
-		<link rel="apple-touch-icon" href="favicons/apple-icon-180x180.png"> <!-- 180×180 -->
+		<link rel="icon" href="favicons/icon-36x36.png"><!-- 32×32 -->
+		<link rel="apple-touch-icon" href="favicons/apple-icon-180x180.png"><!-- 180×180 -->
+
+		<link rel="mainfest" href="manifest.webmanifest">
 	</head>
 
 	<body class="page__body">
@@ -31,10 +33,7 @@
 
 						<!-- picture для логотипа-текста -->
 						<picture>
-							<!-- Для web версии -->
-							<source width="118" height="21" media="(min-width: 1440px)" type="image/svg+xml" srcset="./images/logo-text-header-web.svg">
-
-							<!-- Для tablet версии -->
+							<!-- Для tablet и web версии -->
 							<source width="101" height="18" media="(min-width: 800px)" type="image/svg+xml" srcset="./images/logo-text-header-tablet.svg">
 
 							<!-- Для mobile версии -->
@@ -157,6 +156,7 @@
 
 				<!-- Адрес и карта -->
 				<section class="address">
+					<h2 class="visually-hidden">Адрес магазина CAT ENERGY</h2>
 					<div class="address-title">
 						<p>Приглашаем к сотрудничеству дилеров!</p>
 						<address>
@@ -165,7 +165,7 @@
 						</address>
 					</div>
 					<div class="address-map">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7994.762473087486!2d30.309979649714336!3d59.937275742389886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1701317990021!5m2!1sru!2sru" width="320" height="362" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Точка на карте"></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7994.762473087486!2d30.309979649714336!3d59.937275742389886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1701317990021!5m2!1sru!2sru" width="320" height="362" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Точка на карте"></iframe>
 					</div>
 				</section>
 				
@@ -210,9 +210,9 @@
 							<path d="M13.6426 0.515754L13.5 0.5L0 1.90733V26.5129L13.5 34.5L27 26.5129V1.90733L13.6426 0.515754ZM25.2344 25.5151L13.5 32.4573L1.76561 25.5151V15.4293L13.4507 22.3451L13.4701 23.5984L5.45351 18.8548L5.44295 20.0801L13.4894 24.8885L13.5088 26.175L5.46408 21.4174L5.45351 22.6427L13.5 27.4511L21.6239 22.6182V21.3929V17.409L25.2432 15.2595L25.2344 25.5151ZM25.2344 13.9519L22.0147 15.8319L20.5325 16.7071L13.4666 12.5201L13.456 13.7454L19.4957 17.318L19.4429 17.3495L19.3126 17.4247L18.4536 17.9166L13.4666 14.9689L13.456 16.1942L17.3921 18.5222L16.4591 19.1314L16.438 19.1436L13.4666 17.402L13.456 18.6273L15.4029 19.7615L13.4155 20.9483L1.7973 14.0762L13.4349 7.11831L25.2344 13.9519ZM25.2344 12.7266L13.4401 5.81075L1.76561 12.7196V3.4897L13.5 2.26442L25.2344 3.4897V12.7266Z" fill="#666666"/>
 						</g>
 						<defs>
-							<clipPath id="clip0_99067_120">
+							<clippath>
 								<rect width="27" height="34" fill="white" transform="translate(0 0.5)"/>
-							</clipPath>
+							</clippath>
 						</defs>
 					</svg>
 				</a>
